Actions
Bug #11337
closedgeniconvtbl: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors with NULL pointer:
../geniconvtbl.c: In function 'eval_cond_tbl': ../geniconvtbl.c:1000:13: error: comparison between pointer and integer [-Werror] if (NULL == ist->default_action.itm_ptr) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit e6aecaeeb5918142935e45d37651ac1c267d8e2a
commit e6aecaeeb5918142935e45d37651ac1c267d8e2a Author: Toomas Soome <tsoome@me.com> Date: 2019-07-11T15:12:36.000Z 11337 geniconvtbl: NULL pointer errors Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions